# System-Architecture---icom

./: .gitignore  CMakeLists.txt  Makefile  README.md
benchmark/: CMakeLists.txt  Makefile
benchmark/inc/: simple_timer.h
benchmark/src/: main.c  simple_timer.c
icom/: CMakeConfig.cmake.in  CMakeLists.txt
icom/inc/: icom.h  icom_flags.h  icom_macro.h  icom_status.h  link_zmq.h  notification.h  string_parser.h
icom/src/: icom.c  icom_flags.c  link_socket.c  string_parser.c
inc/: config.h  icom.h  icom_common.h  icom_config.h  icom_flags.h  icom_status.h  icom_type.h  link_fifo.h  link_socket.h  link_zmq.h  macro.h  notification.h  notifying.h  string_parser.h
src/: config.c  icom.c  icom_common.c  icom_config.c  icom_flags.c  icom_pub_sub.c  icom_type.c  link_fifo.c  link_socket.c  link_zmq.c  string_parser.c
tests/: CMakeLists.txt  Makefile
tests/inc/: link_common.h
tests/initialization/: Makefile
tests/initialization/src/: main.c
tests/inprocPushPull/src/: main.c
tests/simpleCommunication/inc/: timer.h
tests/simpleCommunication/src/: main.c
tests/simpleCommunicationPubSub/: Makefile
tests/simpleCommunicationPubSub/src/: main.c
tests/simpleCommunicationPushPull/src/: main.c  timer.c
tests/src/: config.cpp  link_common.cpp  link_socket.cpp  main.cpp  parser.cpp
tests/testUtils/inc/: testUtils.h
tests/testUtils/src/: testUtils.c
